- 05: Enh. #38: Multiple selection (Alt+Click: entire subqueue, Shift+Click: sequence) <Kay Gürtzig>
- 05: updated language files (DE,EN,ES) <Kay Gürtzig>
- 05: executor: Localisation attempts for Control panel <Kay Gürtzig>
- 05: Enh. #51 - Handling of empty input/output instructions by executor and export <Kay Gürtzig>
- 05: executor: Parameter splitting for functions calls improved <Kay Gürtzig>

Version 3.23-04 (2015.12.12)
- 01: Bugfix #50 - added return types to signature for function export in Pascal [lhoreman]
- 02: Bugfix #51 - stand alone input/output identifier where not converted in Pascal export [IrisLuc]
- 03: Bugfix #48 - delay propagation to Turtleizer <Kay Gürtzig>
- 03: Bugfix #49 - failing equality detection among variables (also array elements) <Kay Gürtzig>
- 04: Enh. #36 - allowing to pause from input and output dialogs <Kay Gürtzig>
- 04: Enh. #54 - Output instruction with expression list (executor, most generators) <Kay Gürtzig>
- 04: Bugfix #55 - highlighting of variables with keywords as substring mended <Kay Gürtzig>
- 04: Bugfix #57 - Risk of endless loops and other flaws on Perl export <Kay Gürtzig>
- 04: Bugfix #59 - For loop export to Python was defective <Kay Gürtzig>

Version 3.23 (2015.12.04)
- 01: executor: fixed a bug in the repeat loop [Sylvio Tabor]
- 02: executor: fixed a bug while interpreting the title [Benjamin Bartsch]
- 03: export: split PNG export into multiple images [Moritz Schulze]
- 04: executor: logical operator in CASE-statement [Lies Callemeyn]
- 05: export: added code export option [Hanspeter Thöni]
- 06: export: added comments to Pascal export [Dirk Wilhelmi]
- 06: export: moved export options into menu [Hanspeter Thöni]
- 07: export: added namespace "nsd" to save files [Treaki]
- 08: added polish translation [Jacek Dzieniewicz]
- 09: new drawing strategy for the IF statement [David Tremain]
- 09: new colorizing strategy for elements [David Tremain]
- 10: visual re-enforcement for draw & drop [David Tremain]